# EDEN

./: README.md  frames.gv
EDEN/Exploration/eden/: CMakeLists.txt
Exploration/single_exp/: CMakeLists.txt  package.xml
Exploration/single_exp/include/single_exp/: single_exp.h  single_exp_fsm.h
Exploration/single_exp/launch/: exploration.launch  lite_sim.launch  rotors_sim.launch  vis_only.launch
Exploration/single_exp/resource/: single_exp_sim_factory_lite_low_pad.yaml
Exploration/single_exp/resource/lite_sim/: factory.yaml
Exploration/single_exp/rviz/: single_exp_demo.rviz  single_exp_demo_co_lite.rviz  single_exp_demo_lite.rviz  single_exp_demo_m_lite.rviz
Exploration/single_exp/src/: single_exp.cpp  single_exp_fsm.cpp  single_exp_node.cpp
Exploration/single_exp/worlds/: city.world
Mapping/RipNeon/: CMakeLists.txt  package.xml
Mapping/RipNeon/color/: Abbey_Road.yaml  Burn.yaml  DrFeelgood.yaml  Odessey_Oracle.yaml  Paranoid.yaml  Powerslave.yaml  color_id.yaml
Mapping/RipNeon/src/: initialization.cpp  raycast.cpp  ripneon.cpp  voxel_io.cpp
Mapping/block_map/: CMakeLists.txt
Mapping/lowres_map_lite/: package.xml
Mapping/mr_dtg_plus/: CMakeLists.txt  package.xml
Mapping/mr_dtg_plus/include/mr_dtg_plus/: mr_dtg_plus.h
Mapping/mr_dtg_plus/src/: mr_dtg_plus.cpp  mr_dtg_plus_initialization.cpp  mr_dtg_plus_path_search.cpp  mr_dtg_plus_target_refine.cpp
Test/ato_test/: CMakeLists.txt  package.xml
Trajectory/traj_exc/: package.xml
data_statistics/src/: computation_statistician.cpp
idea/: 1-29.docx  plan.txt
pics/eden/: vel_color.vsdx
(+58 files in other folders)
